WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39370
[chromium] Fix slider status when buffering
https://bugs.webkit.org/show_bug.cgi?id=39370
Summary
[chromium] Fix slider status when buffering
Victoria Kirst
Reported
2010-05-19 11:52:25 PDT
When you load a video, the slider shows the entire video has been buffered, when only a small portion of it has been buffered.
Attachments
Patch
(2.98 KB, patch)
2010-05-19 12:40 PDT
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Patch
(3.01 KB, patch)
2010-05-20 09:57 PDT
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Victoria Kirst
Comment 1
2010-05-19 12:40:32 PDT
Created
attachment 56511
[details]
Patch
Hin-Chung Lam
Comment 2
2010-05-19 12:45:47 PDT
Victoria is working with me on HTML5 video in Chromium. This change looks good to me.
David Levin
Comment 3
2010-05-19 16:19:03 PDT
Comment on
attachment 56511
[details]
Patch Thanks Alpha for looking it over. Just a few minor nits to address.
> diff --git a/WebCore/ChangeLog b/WebCore/ChangeLog
> + > + * rendering/RenderMediaControlsChromium.cpp: > + (WebCore::paintMediaSlider): > + Added logic to align the buffering bar with the thumb. Half of the thumb image is transparent, so the buffer bar is adjusted to fill in this gap.
ChangeLog entries tend to wrap text somewhere around 80 columns.
> diff --git a/WebCore/rendering/RenderMediaControlsChromium.cpp b/WebCore/rendering/RenderMediaControlsChromium.cpp > +static Image* getMediaSliderThumb() > +{ > + static Image* mediaSliderThumb = platformResource("mediaSliderThumb");
Two spaces before =
> + > + double bufferedWidth = 0.0; > + if (mediaElement->percentLoaded() > 0.0) { > + // Account for width of slider thumb
Please add a period to the end of the comment.
> + Image* mediaSliderThumb = getMediaSliderThumb(); > + double thumbWidth = mediaSliderThumb->width() / 2.0 + 1.0; > + double rectWidth = bufferedRect.width() - thumbWidth; > + if (rectWidth < 0) > + rectWidth = 0;
I'm not sure why you initialized "double bufferedWidth" with 0.0 above but are using 0 here. (It doesn't matter but inconsistency raises flags for me.)
Victoria Kirst
Comment 4
2010-05-20 09:57:58 PDT
Created
attachment 56604
[details]
Patch
WebKit Commit Bot
Comment 5
2010-05-21 07:44:18 PDT
Comment on
attachment 56604
[details]
Patch Clearing flags on attachment: 56604 Committed
r59932
: <
http://trac.webkit.org/changeset/59932
>
WebKit Commit Bot
Comment 6
2010-05-21 07:44:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug